fix visibility

--- a/styles.css
+++ b/styles.css
@@ -54,3 +54,13 @@ table {
 	border-width: 5px;
 	border-color: darkblue; 
 }
+
+#populationAnnotation {
+	position: absolute;
+	visibility: none;
+	left: 750;
+	top: 500;
+	word-wrap: normal;
+	width: 100;
+	height: 200;
+}
